# todeskai-discovery

./: .gitignore  Cargo.toml  Makefile  README.md
.gemini/: config.yaml  styleguide.md
.github/workflows/: ci.yml  release-deploy.yml
crates/discovery-entities/: Cargo.toml
crates/discovery-entities/src/: lib.rs  servers.rs
crates/discovery-migration/: Cargo.toml
crates/discovery-migration/src/: lib.rs  m001_create_servers.rs  m002_add_p2p_fields.rs
crates/discovery-server/: Cargo.toml
crates/discovery-server/src/: config.rs  error.rs  lib.rs  main.rs  relay.rs  tests.rs  tls.rs
crates/discovery-server/src/api/: admin_routes.rs  auth_routes.rs  middleware.rs  mod.rs  rate_limit.rs  server_routes.rs
crates/discovery-server/src/services/: admin_service.rs  cleanup_service.rs  mod.rs  registry_service.rs
