[package]
name = "discovery-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "discovery-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
rcgen = { workspace = true }
rustls-acme = { workspace = true }
rustls = { workspace = true }
futures-util = { workspace = true }
sea-orm = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
url = { workspace = true }
discovery-entities = { path = "../discovery-entities" }
discovery-migration = { path = "../discovery-migration" }

[dev-dependencies]
tower = { workspace = true }
